--- a/gluegun/gon/src/templates/screen.tsx.ejs
+++ b/gluegun/gon/src/templates/screen.tsx.ejs
@@ -1,23 +1,23 @@
 import * as React from "react"
 import { observer } from "mobx-react-lite"
 import { ViewStyle } from "react-native"
-import { Screen, Text } from "../components"
+import { Screen, Text, Header } from "../components"
 // import { useStores } from "../models/root-store"
 import { color } from "../theme"
-import { NavigationInjectedProps } from "react-navigation"
+import { NavigationScreenProp } from "react-navigation"
 
-export interface <%= props.pascalName %>Props extends NavigationInjectedProps<{}> {
+export interface <%= props.pascalName %>Props {
+  navigation: NavigationScreenProp<any,any>
 }
 
 const ROOT: ViewStyle = {
-  backgroundColor: color.palette.black,
 }
 
 export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = observer((props) => {
   // const { someStore } = useStores()
   return (
     <Screen style={ROOT} preset="scroll">
-      <Text preset="header" tx="<%= props.camelName %>.header" />
+      <Header HeaderTx="<%= props.camelName %>.header" />
     </Screen>
   )
 })
