chnage screen generate

--- a/gluegun/lo/src/templates/screen.tsx.ejs
+++ b/gluegun/lo/src/templates/screen.tsx.ejs
@@ -16,6 +16,7 @@ export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalNa
     <Screen preset="scroll">
       <Header headerTx="<%= props.camelName %>.header" leftIcon="back" />
       <View style={styles.container} >
+        <Text>123</Text>
       </View>
     </Screen>
   )
