--- a/gluegun/lo/src/templates/screen.tsx.ejs
+++ b/gluegun/lo/src/templates/screen.tsx.ejs
@@ -1,9 +1,9 @@
 import React from "react"
 import { observer } from "mobx-react-lite"
 import { ViewStyle, StyleSheet } from "react-native"
-import { Screen, Text, Header, View } from "../../components"
-// import { useStores } from "../../models/root-store"
-import { color, spacing } from "../../theme"
+import { Screen, Text, Header, View } from "components"
+// import { useStores } from "models/root-store"
+import { color, spacing } from "theme"
 import { NavigationScreenProp } from "react-navigation"
 
 export interface <%= props.pascalName %>Props {
