--- a/gluegun/gon/src/templates/function-component.tsx.ejs
+++ b/gluegun/gon/src/templates/function-component.tsx.ejs
@@ -1,8 +1,8 @@
 import React from "react"
 import { View } from "react-native"
 import { useObserver } from "mobx-react-lite"
-import { Text } from "../"
-import { useStores } from "../../models/root-store"
+import { Text } from "../text/text"
+import { useStores } from "models/root-store"
 import { <%= props.camelCaseName %>Styles as styles } from "./<%= props.name %>.styles"
 
 export interface <%= props.pascalName %>Props {}
