--- a/gluegun/web/src/templates/screen.tsx.ejs
+++ b/gluegun/web/src/templates/screen.tsx.ejs
@@ -1,4 +1,5 @@
 import React from 'react'
+import { Screen } from 'components'
 
 interface <%= props.pascalName %>Props{
   
@@ -6,9 +7,9 @@ interface <%= props.pascalName %>Props{
 
 export const <%= props.pascalName %>: React.FC<<%= props.pascalName %>Props> = (props) => {
     return (
-      <div>
+      <Screen>
         <%= props.pascalName %>
-      </div>
+      </Screen>
     );
 }
 
