--- a/gluegun/gon/src/templates/screen.tsx.ejs
+++ b/gluegun/gon/src/templates/screen.tsx.ejs
@@ -4,7 +4,9 @@ import { ViewStyle, StyleSheet } from "react-native"
 import { Screen, Text, Header, View } from "components"
 // import { useStores } from "models/root-store"
 import { color, spacing } from "theme"
-import { NavigationScreenProp } from "react-navigation"
+import { NativeStackNavigationProp } from "react-native-screens/native-stack"
+import { ParamListBase } from "@react-navigation/native"
+
 
 const styles = StyleSheet.create({
   container: {
@@ -14,11 +16,14 @@ const styles = StyleSheet.create({
 })
 
 export interface <%= props.pascalName %>Props {
-  navigation: NavigationScreenProp<any, any>
+  navigation: NativeStackNavigationProp<ParamListBase>
 }
 
 export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = observer((props) => {
-  // const { someStore } = useStores()
+  // const { someStore, anotherStore } = useStores()
+  // OR
+  // const rootStore = useStores()
+
   return (
     <Screen preset="scroll">
       <Header headerTx="<%= props.camelName %>.header" leftIcon="back" />
