--- a/gluegun/gon/src/templates/class-component.tsx.ejs
+++ b/gluegun/gon/src/templates/class-component.tsx.ejs
@@ -1,7 +1,9 @@
 import React, { Component } from 'react'
 import { View } from 'react-native'
 import { Text } from "../"
+<% if (props.haveStyle) { -%>
 import { <%= props.camelCaseName %>Styles as styles } from "./<%= props.name %>.styles"
+<% } -%>
 
 export interface <%= props.pascalName %>Props {}
 
