--- a/gluegun/gon/src/templates/function-component.tsx.ejs
+++ b/gluegun/gon/src/templates/function-component.tsx.ejs
@@ -3,7 +3,9 @@ import { View } from "react-native"
 import { useObserver } from "mobx-react-lite"
 import { Text } from "../text/text"
 import { useStores } from "models/root-store"
+<% if (props.haveStyle) { -%>
 import { <%= props.camelCaseName %>Styles as styles } from "./<%= props.name %>.styles"
+<% } -%>
 
 export interface <%= props.pascalName %>Props {}
 
@@ -12,7 +14,7 @@ export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalNa
   // const { someStore } = useStores()
 
   return useObserver(() => (
-    <View style={styles.wrapper}>
+    <View >
       <Text>Hi Func</Text>
     </View>
   ))
