--- a/gluegun/gon/src/templates/screen.tsx.ejs
+++ b/gluegun/gon/src/templates/screen.tsx.ejs
@@ -1,9 +1,9 @@
 import React from "react"
 import { observer } from "mobx-react-lite"
-import { ViewStyle, StyleSheet } from "react-native"
+import {  StyleSheet } from "react-native"
 import { Screen, Text, Header, View } from "components"
 // import { useStores } from "models/root-store"
-import { color, spacing } from "theme"
+import {  spacing } from "theme"
 import { NativeStackNavigationProp } from "react-native-screens/native-stack"
 import { ParamListBase } from "@react-navigation/native"
 
