--- a/gluegun/gon/src/templates/graphql-response.ts.ejs
+++ b/gluegun/gon/src/templates/graphql-response.ts.ejs
@@ -1,6 +1,6 @@
 import { ObjectType, Field } from 'type-graphql'
-import { FieldError } from './FieldError'
-import { <%= props.pascalName %>} from '../entity/<%= props.pascalName %>'
+import { FieldError } from '../FieldError'
+import { <%= props.pascalName %>} from '../../entity/<%= props.pascalName %>'
 
 @ObjectType()
 export class <%= props.pascalName %>Response {
