--- a/gluegun/gon/src/templates/function-component.tsx.ejs
+++ b/gluegun/gon/src/templates/function-component.tsx.ejs
@@ -1,8 +1,6 @@
 import React from "react"
 import { View } from "react-native"
-import { useObserver } from "mobx-react-lite"
 import { Text } from "../text/text"
-import { useStores } from "models/root-store"
 <% if (props.haveStyle) { -%>
 import { <%= props.camelCaseName %>Styles as styles } from "./<%= props.name %>.styles"
 <% } -%>
@@ -13,9 +11,9 @@ export interface <%= props.pascalName %>Props {}
 export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = props => {
   // const { someStore } = useStores()
 
-  return useObserver(() => (
+  return (
     <View >
       <Text>Hi Func</Text>
     </View>
-  ))
+  )
 }
