--- a/gluegun/gon/src/templates/screen.tsx.ejs
+++ b/gluegun/gon/src/templates/screen.tsx.ejs
@@ -1,25 +1,13 @@
 import React from "react"
-import { observer } from "mobx-react-lite"
-import {  StyleSheet } from "react-native"
 import { Screen, Text, Header, View } from "components"
-// import { useStores } from "models/root-store"
-import {  spacing } from "theme"
 import { NativeStackNavigationProp } from "react-native-screens/native-stack"
 import { ParamListBase } from "@react-navigation/native"
-
-
-const styles = StyleSheet.create({
-  container: {
-    flex: 1,
-    paddingHorizontal: spacing[6]
-  }
-})
 
 export interface <%= props.pascalName %>Props {
   navigation: NativeStackNavigationProp<ParamListBase>
 }
 
-export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = observer((props) => {
+export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = (props) => {
   // const { someStore, anotherStore } = useStores()
   // OR
   // const rootStore = useStores()
@@ -27,9 +15,9 @@ export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalNa
   return (
     <Screen preset="scroll">
       <Header headerTx="<%= props.camelName %>.header" leftIcon="back" />
-      <View style={styles.container} >
+      <View >
         <Text>123</Text>
       </View>
     </Screen>
   )
-})
+}
