--- a/gluegun/gon/src/templates/component.story.tsx.ejs
+++ b/gluegun/gon/src/templates/component.story.tsx.ejs
@@ -1,7 +1,7 @@
 import * as React from "react"
 import { storiesOf } from "@storybook/react-native"
 import { StoryScreen, Story, UseCase } from "../../../storybook/views"
-import { <%= props.pascalName %> } from "./<%= props.name %>"
+import { <%= props.pascalName %> } from "./<%= props.pascalName %>"
 
 declare var module
 
