--- a/gluegun/gon/src/templates/function-component.tsx.ejs
+++ b/gluegun/gon/src/templates/function-component.tsx.ejs
@@ -1,19 +1,19 @@
+import { Box } from 'components/box/Box'
 import React from "react"
-import { View } from "react-native"
-import { Text } from "../text/text"
+import { AppText } from '../app-text/AppText'
 <% if (props.haveStyle) { -%>
 import { <%= props.camelCaseName %>Styles as styles } from "./<%= props.name %>.styles"
 <% } -%>
 
 export interface <%= props.pascalName %>Props {}
 
-
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
 export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = props => {
   // const { someStore } = useStores()
 
   return (
-    <View >
-      <Text>Hi Func</Text>
-    </View>
+    <Box>
+      <AppText>Hi Func</AppText>
+    </Box>
   )
 }
