--- a/gluegun/gon/src/templates/screen.tsx.ejs
+++ b/gluegun/gon/src/templates/screen.tsx.ejs
@@ -1,9 +1,9 @@
 import React from "react"
-import { Screen} from "components"
+import { Screen } from "components"
 import { NativeStackNavigationProp } from "react-native-screens/native-stack"
 import { ParamListBase } from "@react-navigation/native"
 
-export interface <%= props.pascalName %>Props {
+export type <%= props.pascalName %>Props = {
   navigation: NativeStackNavigationProp<ParamListBase>
 }
 
