--- a/gluegun/gon/src/templates/component.tsx.ejs
+++ b/gluegun/gon/src/templates/component.tsx.ejs
@@ -7,8 +7,8 @@ import { <%= props.camelCaseName %>Styles as styles } from "./<%= props.name %>.
 
 export type <%= props.pascalName %>Props = {}
 
-
-export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = props => {
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+export const <%= props.pascalName %>  = (props: <%= props.pascalName %>Props>) => {
   // const { someStore } = useStores()
 
   return (
