--- a/gluegun/gon/src/templates/function-component.tsx.ejs
+++ b/gluegun/gon/src/templates/function-component.tsx.ejs
@@ -5,10 +5,10 @@ import { AppText } from '../app-text/AppText'
 import { <%= props.camelCaseName %>Styles as styles } from "./<%= props.name %>.styles"
 <% } -%>
 
-export interface <%= props.pascalName %>Props {}
+export type <%= props.pascalName %>Props = {}
 
 // eslint-disable-next-line @typescript-eslint/no-unused-vars
-export const <%= props.pascalName %>: React.FunctionComponent<<%= props.pascalName %>Props> = props => {
+export const <%= props.pascalName %>  = (props: <%= props.pascalName %>Props) => {
   // const { someStore } = useStores()
 
   return (
