--- a/gluegun/gon/src/templates/screen.tsx.ejs
+++ b/gluegun/gon/src/templates/screen.tsx.ejs
@@ -1,5 +1,5 @@
-import React from "react"
-import { Screen } from "components"
+import * as React from "react"
+import { Screen } from "../../components"
 import { NativeStackNavigationProp } from "react-native-screens/native-stack"
 import { ParamListBase } from "@react-navigation/native"
 
@@ -8,9 +8,6 @@ export type <%= props.pascalName %>Props = {
 }
 
 export const <%= props.pascalName %>: React.FC<<%= props.pascalName %>Props> = (props) => {
-  // const { someStore, anotherStore } = useStores()
-  // OR
-  // const rootStore = useStores()
 
   return (
     <Screen preset="scroll">
